force-app/main/default/objects/webservicer__Parameter_Mapping__c/webservicer__Parameter_Mapping__c.object-meta.xml
<CustomObject>
    <description>Mapping SOAP parameters</description>
    <label>Parameter Mapping</label>
    <nameField>
        <displayFormat>MAP_SOAP-{0000}</displayFormat>
        <label>Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parameter Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>