force-app/main/default/objects/webservicer__Parameter_Mapping__c/fields/webservicer__Direction__c.field-meta.xml
<CustomField>
    <fullName>webservicer__Direction__c</fullName>
    <label>Direction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>