force-app/main/default/objects/webservicer__Parameter_Mapping__c/fields/webservicer__Fixed_value__c.field-meta.xml
<CustomField>
    <fullName>webservicer__Fixed_value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fixed value</label>
    <type>Checkbox</type>
</CustomField>