force-app/main/default/objects/webservicer__Parameter_Mapping__c/fields/webservicer__Mapping__c.field-meta.xml
<CustomField>
    <fullName>webservicer__Mapping__c</fullName>
    <label>Mapping</label>
    <referenceTo>webservicer__Mapping__c</referenceTo>
    <relationshipLabel>Parameter Mappings</relationshipLabel>
    <relationshipName>SOAP_parameter_mapping</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>