force-app/main/default/objects/webservicer__Parameter_Mapping__c/fields/webservicer__Webservice_parameter__c.field-meta.xml
<CustomField>
    <fullName>webservicer__Webservice_parameter__c</fullName>
    <label>Webservice parameter</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>